public class Endlin {
    public static void main(String[] args) {
        DocumentEditor editor = new DocumentEditor();
        editor.run();
    }
}